[add] chain of thoughts

--- a/GenerativeAI/AdvancedGenAI/Demos/Lesson_06_Advanced_Prompt_Engineering_Techniques_Part_1/Demo_01_Zero_Shot_Prompting.ipynb
+++ b/GenerativeAI/AdvancedGenAI/Demos/Lesson_06_Advanced_Prompt_Engineering_Techniques_Part_1/Demo_01_Zero_Shot_Prompting.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "422ae32f",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "172a828d-22d6-486b-be55-62c9258add5b",
    "metadata": {
     "id": "172a828d-22d6-486b-be55-62c9258add5b"
@@ -84,10 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "ef2f893e-62a2-4bb9-9af8-fbe111a377da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The class `langchain_community.chat_models.openai.ChatOpenAI` was deprecated in langchain-community 0.1.0 and will be removed in 0.2.0. Use langchain_openai.ChatOpenAI instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the LLM\n",
     "# llm = OpenAI(model_name=\"gpt-3.5-turbo\", temperature=0)\n",
@@ -110,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "3ef6aa68-a8aa-45c6-b70b-3060e9253b90",
    "metadata": {
     "id": "3ef6aa68-a8aa-45c6-b70b-3060e9253b90",
@@ -129,22 +138,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "8df2acdd-73d6-4e3c-a2c5-25e2e92df99f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValidationError",
-     "evalue": "2 validation errors for LLMChain\nprompt\n  field required (type=value_error.missing)\nprompte\n  extra fields not permitted (type=value_error.extra)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValidationError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 14\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m llm_chain\u001b[38;5;241m.\u001b[39mrun(sentence)\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# Test the LangChain-based translation\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43mtranslate_with_langchain\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mHello, world!\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTranslated Sentence:\u001b[39m\u001b[38;5;124m\"\u001b[39m, response)\n",
-      "Cell \u001b[0;32mIn[14], line 9\u001b[0m, in \u001b[0;36mtranslate_with_langchain\u001b[0;34m(sentence)\u001b[0m\n\u001b[1;32m      3\u001b[0m formatted_prompt \u001b[38;5;241m=\u001b[39m prompt\u001b[38;5;241m.\u001b[39mformat(sentence\u001b[38;5;241m=\u001b[39msentence)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# # return llm(formatted_prompt)\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# return llm.predict(formatted_prompt)\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \n\u001b[1;32m      8\u001b[0m \u001b[38;5;66;03m# linking together the prompt template and llm\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m llm_chain \u001b[38;5;241m=\u001b[39m \u001b[43mLLMChain\u001b[49m\u001b[43m(\u001b[49m\u001b[43mllm\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mllm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprompte\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mformatted_prompt\u001b[49m\u001b[43m)\u001b[49m \n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m llm_chain\u001b[38;5;241m.\u001b[39mrun(sentence)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/langchain_core/load/serializable.py:107\u001b[0m, in \u001b[0;36mSerializable.__init__\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    106\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: Any) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 107\u001b[0m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    108\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_lc_kwargs \u001b[38;5;241m=\u001b[39m kwargs\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.11/site-packages/pydantic/v1/main.py:341\u001b[0m, in \u001b[0;36mBaseModel.__init__\u001b[0;34m(__pydantic_self__, **data)\u001b[0m\n\u001b[1;32m    339\u001b[0m values, fields_set, validation_error \u001b[38;5;241m=\u001b[39m validate_model(__pydantic_self__\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__class__\u001b[39m, data)\n\u001b[1;32m    340\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m validation_error:\n\u001b[0;32m--> 341\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m validation_error\n\u001b[1;32m    342\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    343\u001b[0m     object_setattr(__pydantic_self__, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__dict__\u001b[39m\u001b[38;5;124m'\u001b[39m, values)\n",
-      "\u001b[0;31mValidationError\u001b[0m: 2 validation errors for LLMChain\nprompt\n  field required (type=value_error.missing)\nprompte\n  extra fields not permitted (type=value_error.extra)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The function `predict` was deprecated in LangChain 0.1.7 and will be removed in 0.2.0. Use invoke instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Translated Sentence: 'Bonjour, monde!'\n"
      ]
     }
    ],
@@ -153,12 +163,12 @@
     "    # Format the prompt and run the LLM\n",
     "    formatted_prompt = prompt.format(sentence=sentence)\n",
     "    \n",
-    "    # # return llm(formatted_prompt)\n",
-    "    # return llm.predict(formatted_prompt)\n",
+    "    # return llm(formatted_prompt)\n",
+    "    return llm.predict(formatted_prompt)\n",
     "\n",
-    "    # linking together the prompt template and llm\n",
-    "    llm_chain = LLMChain(llm=llm, prompte=formatted_prompt) \n",
-    "    return llm_chain.run(sentence)\n",
+    "    # # Initialize an LLMChain to combine the LLM and the prompt template\n",
+    "    # llm_chain = LLMChain(prompt=formatted_prompt, llm=llm)\n",
+    "    # return llm_chain.run(sentence)\n",
     "\n",
     "\n",
     "# Test the LangChain-based translation\n",
@@ -178,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "ba0955ad-d427-4b50-a7f8-e50828fbcfaa",
    "metadata": {},
    "outputs": [
@@ -186,15 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose a task (translate/summarize/classify):  translate\n",
-      "Enter your text:  why are you late\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Response: Pourquoi es-tu en retard ?\n"
+      "Response: Passez une bonne nuit\n"
      ]
     }
    ],
