--- a/GenerativeAI/AdvancedGenAI/Demos/Lesson_07_Advanced_Prompt_Engineering_Techniques_Part_2/Demo_02_Self_Consistency.ipynb
+++ b/GenerativeAI/AdvancedGenAI/Demos/Lesson_07_Advanced_Prompt_Engineering_Techniques_Part_2/Demo_02_Self_Consistency.ipynb
@@ -44,29 +44,34 @@
    "metadata": {
     "id": "c9a0ea85-80ba-4af5-bc64-73d74a28b57f"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/voc/work/.local/lib/python3.10/site-packages/langchain/llms/openai.py:241: UserWarning: You are trying to use a chat model. This way of initializing it is no longer supported. Instead, please use: `from langchain.chat_models import ChatOpenAI`\n",
-      "  warnings.warn(\n",
-      "/voc/work/.local/lib/python3.10/site-packages/langchain/llms/openai.py:898: UserWarning: You are trying to use a chat model. This way of initializing it is no longer supported. Instead, please use: `from langchain.chat_models import ChatOpenAI`\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\n",
     "import os\n",
-    "from langchain.llms import OpenAI\n",
+    "# import openai\n",
+    "\n",
+    "# from langchain.llms import OpenAI\n",
+    "from langchain_openai import OpenAI\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "# from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.schema import HumanMessage\n",
+    "\n",
+    "\n",
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.chains import LLMChain\n",
+    "from dotenv import load_dotenv, find_dotenv\n",
     "\n",
-    "# Set up the OpenAI API Key\n",
-    "#os.environ[\"OPENAI_API_KEY\"] = \"your_openai_api_key\"\n",
+    "# from openai import OpenAI\n",
+    "\n",
+    "_ = load_dotenv(find_dotenv()) # read local .env file\n",
+    "\n",
+    "# openai.api_key  = os.getenv('OPENAI_API_KEY')\n",
+    "\n",
+    "client = OpenAI(api_key=os.environ['OPENAI_API_KEY'])\n",
     "\n",
     "# Initialize the OpenAI model with temperature > 0 for varied outputs\n",
-    "llm = OpenAI(model_name=\"gpt-3.5-turbo\", temperature=0.7)"
+    "llm = ChatOpenAI(model=\"gpt-4\", temperature=0.7)\n"
    ]
   },
   {
@@ -127,17 +132,28 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.11/site-packages/langchain_core/_api/deprecation.py:117: LangChainDeprecationWarning: The function `run` was deprecated in LangChain 0.1.0 and will be removed in 0.2.0. Use invoke instead.\n",
+      "  warn_deprecated(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Final Response:\n",
-      " Line of Reasoning 1: The weight of an object is determined by its mass, not the number of individual items. Since feathers are much lighter than a weight of 30 pounds, the 30-pound weight is heavier than 1000 feathers.\n",
+      " Line of Reasoning 1:\n",
+      "This reasoning is based purely on the standard unit of weight measurement. A pound is a unit of weight used in the imperial system, and is commonly used in the United States. We are given that the weight is 30 pounds. On the other hand, the feathers are simply stated to be 1000 in number. However, the question does not provide us with the weight of a single feather. Therefore, without further information, we can only compare the weight to the known quantity, which is the 30-pound weight.\n",
       "\n",
-      "Line of Reasoning 2: Feathers are generally very light, so even though there are 1000 of them, they would still weigh less than a 30-pound weight. Therefore, the 30-pound weight is heavier than 1000 feathers.\n",
+      "Line of Reasoning 2:\n",
+      "This reasoning involves a bit of science. It's true that feathers are much lighter than most other objects. However, 1000 is a considerably large number. If each feather weighed just a bit, collectively, they could possibly outweigh the 30-pound weight. But, without the average weight of a feather, we can't make this calculation. So, based on the information given, we must assume that the 30-pound weight is heavier.\n",
       "\n",
-      "Line of Reasoning 3: To compare the weight of 1000 feathers to a 30-pound weight, we need to convert the weight of feathers into pounds. Since a feather weighs significantly less than a pound, the collective weight of 1000 feathers would still be less than 30 pounds. Therefore, the 30-pound weight is heavier than 1000 feathers.\n",
+      "Line of Reasoning 3:\n",
+      "This reasoning is based on common sense and general knowledge about the world. We know that feathers are extremely light. Even a large number of feathers, like 1000, would be unlikely to weigh much. Compare this to a 30-pound weight, which is designed to be heavy and is commonly used for strength training. Based on everyday experience, we can reasonably infer that the 30-pound weight is heavier.\n",
       "\n",
-      "Based on these lines of reasoning, the most consistent answer is that a 30-pound weight is heavier than 1000 feathers.\n"
+      "Based on these lines of reasoning, the most consistent answer is: the 30-pound weight is heavier.\n"
      ]
     }
    ],
@@ -150,6 +166,7 @@
     "\n",
     "# Run the chain\n",
     "response = llm_chain.run(question)\n",
+    "# response = llm.invoke([HumanMessage(content=question)])\n",
     "print(\"Final Response:\\n\", response)\n"
    ]
   },
@@ -169,7 +186,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 [3.10]",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -183,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
