--- a/GenerativeAI/AdvancedGenAI/Demos/Lesson_07_Advanced_Prompt_Engineering_Techniques_Part_2/Demo_03_Tree_of_Thoughts.ipynb
+++ b/GenerativeAI/AdvancedGenAI/Demos/Lesson_07_Advanced_Prompt_Engineering_Techniques_Part_2/Demo_03_Tree_of_Thoughts.ipynb
@@ -169,7 +169,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 [3.10]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -183,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
