[add] langchain load splitter and retriever

--- a/GenerativeAI/AdvancedGenAI/Demos/Lesson_09_LangChain_for_LLM_Application_Development_Part_2/Demo_01_Langchain_Loader_splitter_embeddings_vectorstore.ipynb
+++ b/GenerativeAI/AdvancedGenAI/Demos/Lesson_09_LangChain_for_LLM_Application_Development_Part_2/Demo_01_Langchain_Loader_splitter_embeddings_vectorstore.ipynb
@@ -325,8 +325,14 @@
       },
       "outputs": [],
       "source": [
+        "# From META Inc.\n",
+        "\n",
         "# Create FAISS instance from documents and embeddings\n",
-        "faiss_index = FAISS.from_documents(split_texts, openai_embed)\n"
+        "faiss_index = FAISS.from_documents(split_texts, openai_embed)\n",
+        "\n",
+        "#reference:\n",
+        "# https://engineering.fb.com/2017/03/29/data-infrastructure/faiss-a-library-for-efficient-similarity-search/ \n",
+        "\n"
       ]
     },
     {
